@@ -1,3 +1,10 @@
+2001-03-29  Andy Hertzfeld  <andy@eazel.com>
+
+	* libnautilus-extensions/nautilus-annotation.c:
+	(nautilus_annotation_add_annotation):
+	* libnautilus-extensions/nautilus-annotation.h:
+	partially implemented add_annotation
+	
 2001-03-28  Andy Hertzfeld  <andy@eazel.com>
 
 	made the annotation edit field display existing annotation text,
